<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orders_more_info_list_item_MATE_Code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_more_info_list_item_MATE_Code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orders_more_info_list_item_MATE_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_MATE_Name"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_MUNITU_NAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_MUNITU_NAME"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_MATE_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_MATE_Size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orders_more_info_list_item_MATE_Model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_MATE_Model"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_PRHSOD_AMNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_PRHSOD_AMNT"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_PRHSOD_ACCEIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_PRHSOD_ACCEIN"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orders_more_info_list_item_PRHSOD_BILLIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_PRHSOD_BILLIN"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_PRHSOD_AMNT_RTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_PRHSOD_AMNT_RTN"/>
            <TextView
                android:id="@+id/orders_more_info_list_item_MATE_PRICEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_more_info_list_item_MATE_PRICEP"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>