<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apply_more_info_list_item_MATE_Code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_more_info_list_item_MATE_Code"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apply_more_info_list_item_MATE_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply_more_info_list_item_MATE_Name"/>
            <TextView
                android:id="@+id/apply_more_info_list_item_MATE_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply_more_info_list_item_MATE_Size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apply_more_info_list_item_PRHSD_AMNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply_more_info_list_item_PRHSD_AMNT"/>
            <TextView
                android:id="@+id/apply_more_info_list_item_MATE_PRICEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply_more_info_list_item_MATE_PRICEP"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>